[package]
name = "rusty-lang"
version = "0.1.0"
edition = "2021"
authors = ["Chevon Phillip"]
license = "MIT"
description = "A simple CLI application written in Rust"
repository = "https://github.com/chevonmdphillip/rusty-lang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
